package morthalClasificacion;

public abstract class Anfibios extends Animal {

}
