package morthalClasificacion;

public abstract class Ave extends Animal {

    private int numeroAlas;

    public Ave() {
        numeroAlas = 2;
    }

    public int getNumeroAlas() {
        return numeroAlas;
    }

    // public void setNumeroAlas(int numeroAlas) {
    // this.numeroAlas = numeroAlas;
    // }

}
