package morthalClasificacion;

public abstract class Peces extends Animal{

}
