package morthalEcosistema.comportamiento;

public interface IAccion1 {

    public void correr();

}
