package morthalEcosistema.comportamiento;

public interface IAccion2 {

    public void volar();


}
