package morthalEcosistema.comportamiento;

public interface IAccion3 {

    public void nadar();


}
