package morthalEcosistema.comportamiento;

import morthalEcosistema.Hierva;

public interface IHerbivoro {

    public void comer(Hierva alimentoHierva);

}
